# threatsmith

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/threatsmith/: __init__.py  assembler.py  main.py  orchestrator.py
src/threatsmith/agents/: __init__.py  application_decomposition_agent.py  attack_modeling_agent.py  base_agent.py  objectives_agent.py  reporting_agent.py  technical_scope_agent.py  threat_analysis_agent.py  vulnerability_analysis_agent.py
src/threatsmith/engines/: __init__.py  base.py  claude_code.py  codex.py
src/threatsmith/frameworks/: __init__.py  _built_in.py  models.py  types.py
src/threatsmith/frameworks/pasta/: __init__.py  _pack.py  stage_01_objectives.py  stage_02_technical_scope.py  stage_03_decomposition.py  stage_04_threat_analysis.py  stage_05_vulnerability.py  stage_06_attack_modeling.py  stage_07_risk_impact.py  stage_08_report.py
src/threatsmith/frameworks/references/: __init__.py  stride_categories.py
src/threatsmith/frameworks/stride_4q/: __init__.py  _pack.py  stage_01_system_model.py  stage_03_mitigations.py  (+3 more)
src/threatsmith/prompts/: assembler.py  contexts.py  owasp_references.py  stage_01_objectives.py  stage_02_technical_scope.py  stage_03_decomposition.py  stage_04_threat_analysis.py  stage_05_vulnerability.py  stage_06_attack_modeling.py  stage_07_risk_impact.py  stage_08_report.py
src/threatsmith/scanners/: gitleaks.py  osv_scanner.py  semgrep.py  trivy.py
src/threatsmith/tools/: code_ingestor.py  mermaid_diagramming.py  owasp_top_ten.py
src/threatsmith/utils/: __init__.py  logging.py  mermaid_renderer.py  metadata.py  reporting.py  scanners.py
tasks/: progress.txt  stories.json  threatsmith-framework-packs-prd.md  threatsmith-v0.2.0-prd.md
tasks/archive/v0.2.0/: progress.txt
tasks/archive/v0.3.0/: stories.json
tests/: test_assembler.py  test_cli.py  test_e2e.py  test_e2e_pasta.py  test_e2e_stride_4q.py  test_engines.py  test_frameworks.py  test_metadata.py  test_orchestrator.py  test_package.py  test_references.py  test_scanners.py  test_stage_01_objectives.py  test_stage_02_technical_scope.py  test_stage_03_decomposition.py  test_stage_04.py  test_stage_05.py  test_stage_06.py  test_stage_07.py  test_stage_08.py  test_stride_categories.py
tests/pasta/: test_stage_01_objectives.py  test_stage_04.py  test_stage_06.py  test_stage_07.py  test_stage_08.py
tests/stride_4q/: test_pack.py  test_stage_01_system_model.py  test_stage_02_threat_identification.py  test_stage_03_mitigations.py  test_stage_04_validation.py  test_stage_05_report.py
(+3 files in other folders)
