[project]
name = "threatsmith"
version = "0.3.1"
description = "AI-powered secure code review and threat analysis engine"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Abdul Rahman Al-Kibbe"}
]
keywords = ["security", "code-review", "ai", "pasta", "owasp", "threat-modeling"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threatsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[project.scripts]
threatsmith = "threatsmith.main:app"

[project.urls]
Homepage = "https://github.com/yogur/threatsmith"
Repository = "https://github.com/yogur/threatsmith"
Issues = "https://github.com/yogur/threatsmith/issues"
